--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=eESJ-chatbot
-spring.ai.openai.api-key=sk-proj-0CwMp1V6KXUCRiQ4AEclT3BlbkFJBl7ZTnwL0cbcmWXdhQAp
+spring.ai.openai.api-key=
 spring.ai.ollama.chat.model=gpt-4o
 server.port = 8080
 
